Fix spacing on status page so columns stay the same width when filtering by last 30 days or by year

--- a/_scss/components/_dropdowns.scss
+++ b/_scss/components/_dropdowns.scss
@@ -1,4 +1,4 @@
-.dropdown-container {
+.dropdown {
   position: relative;
 }
 
