--- a/_scss/components/_incidents.scss
+++ b/_scss/components/_incidents.scss
@@ -1,19 +1,29 @@
+$incident-spacing: 23px;
+$incident-border: 2px solid $color-highlight-lighter;
+
 .incident {
-  margin-bottom: 25px;
+  
+  margin-bottom: $incident-spacing;
+
+  .incident-description:last-child {
+    border-bottom: $incident-border;
+    padding-bottom: $incident-spacing - $base-spacing; 
+  }
+
+  .details-less {
+    border-bottom: $incident-border; 
+    padding-bottom: $incident-spacing;
+  }
+  
   .details-more {
     border-bottom: 1px dashed $color-highlight;
-    padding-bottom: 25px;
-  }
-  .details-less, header + p:last-child {
-    border-bottom: 2px solid $color-highlight-lighter;
-    padding-bottom: 25px;
+    padding-bottom: $incident-spacing;
   }
 }
 
 .no-incidents + .incidents:before {
   content: '';
   display: block;
-  height: 2px;
-  background: $color-highlight-lighter;
-  margin-top: 25px;
+  border-top: $incident-border;
+  margin-top: $incident-spacing;
 }
